--- a/index.html
+++ b/index.html
@@ -6,15 +6,29 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
+  <title>Etsy Search</title>
 </head>
 <body>
   <div class="container">
     <header>
-      <div class="logo"></div>
-      <div class="search-bar"></div>
-      <div class="cart-nav"></div>
-      <div class="category-top-nav"></div>
+      <ul>
+        <li class="logo"></li>
+        <li class="search-bar">Search bar</li>
+        <li class="cart-nav">Cart nav bar</li>
+      </ul>
+
+      <div class="category-top-nav">
+        <ul>
+          <li>Clothing &#38; Accessories</li>
+          <li>Jewelry</li>
+          <li>Craft Supplies &#38; Tools</li>
+          <li>Weddings</li>
+          <li>Entertainment</li>
+          <li>Home &#38; Living</li>
+          <li>Kids &#38; Baby</li>
+          <li>Vintage</li>
+        </ul>
+      </div>
     </header>
     <div class="main-cont">
       <div class="reults-div">
@@ -42,7 +56,24 @@
           <li>Pet Supply</li>
         </ul>
       </div>
-      <div class="products"></div>
+      <div class="products">
+        <div class="product"></div>
+        <div class="product"></div>
+        <div class="product"></div>
+        <div class="product"></div>
+        <div class="product"></div>
+        <div class="product"></div>
+        <div class="product"></div>
+        <div class="product"></div>
+        <div class="product"></div>
+        <div class="product"></div>
+        <div class="product"></div>
+        <div class="product"></div>
+        <div class="product"></div>
+        <div class="product"></div>
+        <div class="product"></div>
+        <div class="product"></div>
+      </div>
       <div class="footer"></div>
     </div>
 
