almost done styling.

--- a/index.html
+++ b/index.html
@@ -13,47 +13,55 @@
     <header>
       <ul>
         <li class="logo"></li>
-        <li class="search-bar">Search bar</li>
-        <li class="cart-nav">Cart nav bar</li>
+        <li class="search-bar"><div class="search-box">whiskey</div></li>
+        <li class="search-button"><p>Search</p></li>
+        <span class="divide"></span>
+        <span class="cart"><p>Cart</p></span>
+        <li class="cart-nav">
+          <span class="sellEtsy"><a href="#">Sell on Etsy</a></span>
+          <span class="register"><a href="#">Register</a></span>
+          <span class="sign-in"><a href="#">Sign in</a></span>
+        </li>
+
       </ul>
 
       <div class="category-top-nav">
         <ul>
-          <li>Clothing &#38; Accessories</li>
-          <li>Jewelry</li>
-          <li>Craft Supplies &#38; Tools</li>
-          <li>Weddings</li>
-          <li>Entertainment</li>
-          <li>Home &#38; Living</li>
-          <li>Kids &#38; Baby</li>
-          <li>Vintage</li>
+          <li class="clothing"><a href="#">Clothing &#38; Accessories</a></li>
+          <li class="jewelry"><a href="#">Jewelry</a></li>
+          <li class="craft"><a href="#">Craft Supplies &#38; Tools</a></li>
+          <li class="weddings"><a href="#">Weddings</a></li>
+          <li class="entertainment"><a href="#">Entertainment</a></li>
+          <li class="home"><a href="#">Home &#38; Living</a></li>
+          <li class="kids"><a href="#">Kids &#38; Baby</a></li>
+          <li class="vintage"><a href="#">Vintage</a></li>
         </ul>
       </div>
     </header>
     <div class="main-cont">
-      <div class="reults-div">
+      <div class="results-div">
         <span class="show-results">Show results for:</span>
-        <span class="search-results"></span>
-        <span class="sort-by"></span>
+        <span class="search-results"><a href="#">All categories </a>&gt;</span>
+        <span class="sort-by">Sort by:</span>
       </div>
       <div class="category-left-nav">
         <ul>
-          <li class="all-results">All categories</li>
-          <li>Home &#38; Living</li>
-          <li>Art &#38; Collectibles</li>
-          <li>Weddings</li>
-          <li>Clothing</li>
-          <li>Paper &#38; Party Supplies</li>
-          <li>Jewelry</li>
-          <li>Accessories</li>
-          <li>Craft Supplies &#38; Tools</li>
-          <li>Bags &#38; Purses</li>
-          <li>Bath &#38; Beauty</li>
-          <li>Shoes</li>
-          <li>Book, Movies &#38; Music</li>
-          <li>Electronics &#38; Accessories</li>
-          <li>Toys &#38; Games</li>
-          <li>Pet Supply</li>
+          <span class="all-results">All categories</span>
+          <li><a href="#">Home &#38; Living</a></li>
+          <li><a href="#">Art &#38; Collectibles</a></li>
+          <li><a href="#">Weddings</a></li>
+          <li><a href="#">Clothing</a></li>
+          <li><a href="#">Paper &#38; Party Supplies</a></li>
+          <li><a href="#">Jewelry</a></li>
+          <li><a href="#">Accessories</a></li>
+          <li><a href="#">Craft Supplies &#38; Tools</a></li>
+          <li><a href="#">Bags &#38; Purses</a></li>
+          <li><a href="#">Bath &#38; Beauty</a></li>
+          <li><a href="#">Shoes</a></li>
+          <li><a href="#">Book, Movies &#38; Music</a></li>
+          <li><a href="#">Electronics &#38; Accessories</a></li>
+          <li><a href="#">Toys &#38; Games</a></li>
+          <li><a href="#">Pet Supply</a></li>
         </ul>
       </div>
       <div class="products">
